#29 Fix: Sidebar toggle padding , header side margins on smaller screens (#31)
* #29 Fix: Sidebar toggle padding , header side margins on smaller screens

* #29 Fix: Code review

--- a/style/components/app-header.css
+++ b/style/components/app-header.css
@@ -15,8 +15,8 @@
 .app-header .sidebar-toggle {
   all: unset;
   cursor: pointer;
-  padding: 0.2rem 0 0.5rem 0.2rem;
-  line-height: 1;
+  padding: 0.5rem;
+  margin-right: -0.5rem;
 }
 
 .app-header .quick-actions .notification-indicator {
